# dpu_mini

./: .gitignore  README.md  cli_setup.sh  requirements.txt  setup.cfg  setup.py
dpu_mini/: __init__.py  auto_fs_surf.py  cmap_functions.py  cmaps.json  fs_tools.py  mesh_dash.py  mesh_format.py  mesh_maker.py  plot_functions.py  stats.py  utils.py
dpu_mini/mesh_dash_assets/: style.css
dpu_mini/pyctx/: exact_geodesic.py  subsurf_experiment.py
dpu_mini/pyctx_cannibalized/: README.md  exact_geodesic.py  subsurf2.py  surface.py
notebooks/: colormaps.ipynb  suface_examples.ipynb
