[metadata]
name = dpu_mini
version = 0.1.0
description = Basic surface plotting
author = Marcus Daghlian
author_email = marcusdag@googlemail.com
url = https://github.com/mdaghlian/dpu_mini

[options]
packages = find:
install_requires =
    matplotlib
    numpy
    seaborn
    scipy
    regex
    # gdist
    PyYAML
    pandas

[options.packages.find]
include =
    dpu_mini
    dpu_mini.*

[options.package_data]
dpu_mini =
    bin/*